# pyVenafi

./: .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yaml  .readthedocs.yaml  MANIFEST.in  README.md  ignored_files_for_prod  package_pypi.sh  prepare_project_for_prod_push.py  pyproject.toml  requirements.txt  setup.py  update_attributes.py  update_cloud_apis.py  update_config.py  upload.py
Automation/: logger.py  testfile.py
Automation/api/: api_base.py  authenticate.py
Automation/apilibs/: authenticate.py  base.py  session.py
Automation/config/: settings.py  settings_example.py  test_base.py
Automation/enum_types/: config_classes.py  misc.py
Automation/enums/: config.py  resultcodes.py  secret_store.py
Automation/feature/: credentials.py  folder.py
Automation/features/: application.py  certificate.py  certificate_authorities.py  credentials.py  device.py  folder.py
Automation/tools/: threads.py
Tape/: guid_generator.py  tags.py  testrunner.py
Tape/sql/: spinDB.py  sqlHelper.py
TestResults/: createHtmlReport.py  parseJenkinsResults.bat  parseJenkinsResults.py
TestResults/dashboard/: app.py  callbacks.py  config.py  endpoints.py  index.py  layouts.py
docs/: Makefile  compile_features_documentation.py  conf.py  index.rst  make.bat  requirements.txt  vendoc.py
iac/: vars.json  win_2016.json
pypi/: setup.py
pytpp/: __init__.py  _about.py  setup.py  upload.py
pyvenafi/: __init__.py  _about.py  logger.py
requirements/: dev.txt  prod.txt
server/: serve.py
venafi/: __init__.py  _about.py  logger.py  setup.py  upload.py
(+2733 files in other folders)
