[project]
version = "1.1.0"
name = "pyvenafi"
description = "Venafi TPP & Cloud API In Python"
authors = [{ name = "SPI Team", email = "spi@venafi.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"

[project.urls]
repository = "https://github.com/Venafi/pyVenafi"

[tool.poetry]
packages = [
  { include = "pyvenafi", from = "." }
]


[tool.poetry.dependencies]
isodate = ">=0.6.0"
packaging = ">=21.3"
python-dateutil = ">=2.8.2"
requests = ">=2.24.0"
simplejson = ">=3.17.6"
jsonpickle = ">=2.1.0"
pydantic = "^2.11"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=4.3.2"
sphinxcontrib-napoleon = "^0.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-rtd-dark-mode = "^1.2.4"
autodoc-pydantic = "^1.7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi"
